
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:padding="7dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imageToUpload"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:textSize="12dp"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Press on the placeholder to insert the image"
            android:paddingBottom="10dp"/>

        <EditText
            android:id="@+id/etUploadName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name" />

        <Button
            android:id="@+id/bUploadImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create" />


    </LinearLayout>

</ScrollView>