<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:textSize="25dp"
            android:paddingLeft="4dp"
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name" />

        <TextView
            android:textSize="25dp"
            android:paddingLeft="4dp"
            android:id="@+id/quantityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Quantity"/>

        <TextView
            android:textSize="25dp"
            android:paddingLeft="4dp"
            android:id="@+id/spinnerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/increment"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/decrement"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save" />


    </LinearLayout>

</ScrollView>